# todo_app

./: README.md  alembic.ini  pyproject.toml  reset_alembic.py
alembic/: env.py
alembic/versions/: 79901399d226_initial_migration.py  ad4ea52a9fae_updating.py  e05dd317bf49_updating.py
config/: database.py
model/: todo_model.py
